# Zappy

./: .clang-format  .gitignore  .gitlab-ci.yml  .plumignore  CMakeLists.txt  Makefile  README.md  network_protocol.md  run.sh  sonar-project.properties
ai/: CMakeLists.txt  go.mod  main.go
ai/ai/: ai.go  data_structures.go  data_structures_test.go  food_management.go  food_management_test.go  levelup.go  levelup_test.go  messages.go  messages_test.go  pathfinding.go  pathfinding_test.go  priority.go  priority_queue.go  priority_queue_test.go  priority_test.go  responses_routine.go  responses_routine_test.go  vision.go  vision_test.go
ai/network/: commands.go  network.go  server_responses.go  server_responses_test.go
gui/: CMakeLists.txt
gui/include/: commands.hpp  gui.hpp  gui_command_parsing.hpp  gui_command_update_handling.hpp  gui_commands.hpp  gui_to_server_cmd_value.hpp  map.hpp  map_utils.hpp  my_exit.hpp  my_write.hpp  networking.hpp  particle.hpp  player.hpp  raylib_utils.hpp  server_commands.hpp  server_handshake.hpp  server_to_gui_cmd_handling.hpp  server_to_gui_cmd_structs.hpp  server_to_gui_cmd_updating.hpp  server_to_gui_cmd_value.hpp  sockets.h  sockets.hpp  string_utils.hpp  systems.hpp  time_unit.hpp  to_gui_commands.hpp  to_server_command.hpp
gui/resources/assets/: cactoro.m3d  cactoro_egg.m3d  crystal1_optimized.glb  food.glb  grass2.glb  grass_full.glb  grass_top.glb  sand.glb  sand_cactus.glb  sand_rocks.glb
gui/resources/atomic_queue/: atomic_queue.h  defs.h
gui/resources/flecs/: flecs.c  flecs.h
gui/resources/raygui/: raygui.h  style_bluish.h
gui/resources/raylib/: CMakeLists.txt
gui/resources/raylib/cmake/: InstallConfigurations.cmake  PackConfigurations.cmake
gui/resources/raylib/src/: Makefile  raudio.c  raymath.h  rcamera.h  rcore.c  rgestures.h  rlgl.h  rmodels.c  rtext.c  rtextures.c
gui/resources/raylib_cpp/include/: CMakeLists.txt  Material.hpp  Wave.hpp
gui/resources/shaders/: sobel.fs  tile_instancing.vs
gui/src/: argv_parser.cpp  gui.cpp  gui_command_parsing.cpp  gui_command_update_handling.cpp  main.cpp  map.cpp  map_utils.cpp  network_main_loop.cpp  particle.cpp  raylib_utils.cpp  server_command_parsing.cpp  server_handshake.cpp  server_to_gui_cmd_dispatching.cpp  server_to_gui_cmd_parsing.cpp  server_to_gui_cmd_updating.cpp  sockets.cpp  systems.cpp
gui/tests/: tests_socket.cpp
selection_test/: Makefile  main.cpp
server/: CMakeLists.txt
server/include/: ai_handling.h  arguments.h  clock.h  coordinates.h  events.h  game_settings.h  gui.h  gui_handling.h  inventory.h  logging.h  map.h  msg.h  new_clients.h  new_clients_handling.h  player.h  queue.h  resources.h  server.h  server_update.h  shared_msg.h  signal_handler.h  swap_clients.h  team.h
server/include/commands/: command_utils.h  gui_commands.h  player_commands.h
server/include/events/: gui_events.h  new_client_events.h  player_events.h
server/include/queue/: msg_queue.h  shared_msg_queue.h
server/include/socket/: sockets.h
server/include/style/: macros.h  status.h
server/include/utils/arrays/: arrays_u32.h  arrays_u64.h  arrays_virtual.h
server/include/utils/itoa/: fast_itoa.h
server/include/utils/pre_generate/: pre_generate.h
server/include/utils/queue/: queue.h
server/include/utils/string/: buffer.h  string.h
server/src/: ai_handling.c  arguments.c  clock.c  clock_timeout.c  coordinates.c  eggs.c  end_of_the_game.c  gui.c  gui_handling.c  main.c  map.c  map_buffer.c  msg.c  new_clients_handling.c  player.c  resource.c  server.c  server_events.c  server_update.c  signal_handler.c  swap_clients.c  team.c  team_management.c
server/src/commands/: command_utils.c
server/src/commands/gui/: gui_bct_command.c  gui_command.c  gui_command_parsing.c  gui_mct_command.c  gui_msz_command.c  gui_none_command.c  gui_pin_command.c  gui_plv_command.c  gui_ppo_command.c  gui_responses.c  gui_sgt_command.c  gui_sst_command.c  gui_tna_command.c
server/src/commands/player/: player_broadcast_command.c  player_command.c  player_command_parsing.c  player_connect_nbr_command.c  player_direction_command.c  player_eject_command.c  player_fork_command.c  player_forward_command.c  player_frequency_command.c  player_incantation_command.c  player_inventory_command.c  player_look_command.c  player_none_command.c  player_responses.c  player_right_left_command.c  player_set_command.c  player_take_command.c
server/src/events/gui/: gui_enw_event.c  gui_events.c  gui_none_event.c  gui_pbc_event.c  gui_pdi_event.c  gui_pdr_event.c  gui_pex_event.c  gui_pfk_event.c  gui_pgt_event.c  gui_pic_event.c  gui_pnw_event.c  gui_seg_event.c  gui_update_mct_event.c
server/src/events/new_client/: new_client_event.c  new_client_new_slot_available_event.c  new_client_none_event.c
server/src/events/player/: player_death_event.c  player_end_of_game_event.c  player_events.c  player_incantation_event.c  player_none_event.c
server/src/queue/: queue_utils_msg.c
server/src/socket/: create_socket.c
server/src/utils/arrays/: arrays_u32.c  arrays_u64.c  arrays_virtual.c
server/src/utils/itoa/: fast_itoa_u32.c
server/src/utils/pre_generate/: pre_generate.c  pre_generate_buffers.c  pre_generate_resources.c  pre_generate_ressources.c
server/src/utils/pre_generate/gui/: gui_pre_generate_mct.c  gui_pre_generate_tna.c  gui_pre_generated_tna.c
server/src/utils/pre_generate/player/: pre_generate_look_indexes.c
server/src/utils/queue/: queue.c  queue_buffer.c
server/src/utils/string/: buffer.c  string.c
server/tests/: tests_clock.c  tests_gui_command_handling.c  tests_itoa.c  tests_parsing.c  tests_player_command_handling.c  tests_queue.c  tests_spreading.c  tests_string.c
server/tests/commands/gui/: tests_gui_bct_command.c  tests_gui_msz_command.c
server/tests/commands/player/: tests_player_broadcast_command.c  tests_player_direction_command.c  tests_player_frequency_command.c  tests_player_inventory_command.c  tests_player_look_command.c
server/tests/include/utils/arrays/: arrays_resources_u32.h
src/: main.c  main.cpp
tests/: test_main.c
